@@ -26,6 +26,9 @@ x commands = x+33; x; arange(0, 6, 0.05)
 y commands = y/1e5; y; arange(0, 6, 0.05)*0
 e commands = e/2.; e; arange(0, 6, 0.05)*0
 
+[data handling]
+toggle show = True
+
 [parameters]
 registred classes = Layer;Stack;Sample;Instrument;UserVars;Surface;Bulk
 set func = set
